<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralTriviaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_1"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_1_text" />

        <RadioGroup
            android:id="@+id/question_1_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_graham_bell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/graham_bell_radio_text" />

            <RadioButton
                android:id="@+id/radio_thomas_edison"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thomas_edison_radio_text" />

            <RadioButton
                android:id="@+id/radio_nicolas_tesla"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nicolas_tesla_radio_text" />

            <RadioButton
                android:id="@+id/radio_albert_einstein"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/albert_einstein_radio_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_2"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_2_text" />

        <EditText
            android:id="@+id/editText_question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/edit_text_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/question_3"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_3_text" />

        <RadioGroup
            android:id="@+id/question_3_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_1939"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_1939" />

            <RadioButton
                android:id="@+id/radio_1945"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_1945" />

            <RadioButton
                android:id="@+id/radio_1931"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_1931" />

            <RadioButton
                android:id="@+id/radio_1918"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_1918" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_4"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_4_text" />

        <RadioGroup
            android:id="@+id/question_4_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_hand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hand_radio_text" />

            <RadioButton
                android:id="@+id/radio_ear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ear_radio_text" />

            <RadioButton
                android:id="@+id/radio_nose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nose_radio_text" />

            <RadioButton
                android:id="@+id/radio_toe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toe_radio_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_5"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_5_text" />

        <EditText
            android:id="@+id/editText_question_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/edit_text_hint"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:id="@+id/question_6"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_6_text" />

        <RadioGroup
            android:id="@+id/question_6_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_pablo_picasso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/picasso_radio_text" />

            <RadioButton
                android:id="@+id/radio_andy_warhol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/warhol_radio_text" />

            <RadioButton
                android:id="@+id/radio_jackson_pollock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pollock_radio_text" />

            <RadioButton
                android:id="@+id/radio_vincent_van_gogh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vang_gogh_radio_text" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_7"
            style="@style/questionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/question_7_text" />

        <LinearLayout
            android:id="@+id/question_7_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_sudan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudan_checkbox_text" />

            <CheckBox
                android:id="@+id/checkbox_uae"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uae_checkbox_text" />

            <CheckBox
                android:id="@+id/checkbox_south_africa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sa_checkbox_text" />

            <CheckBox
                android:id="@+id/checkbox_singapore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singapore_check_text" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:text="@string/submit_button_text" />
    </LinearLayout>

</ScrollView>